Fix layout issues

--- a/src/styles/forecast.css
+++ b/src/styles/forecast.css
@@ -1,6 +1,7 @@
 .forecast-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
   padding: 1.5rem;
@@ -51,7 +52,6 @@
 }
 
 .forecast-dashboard {
-  margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -145,11 +145,6 @@
 
 .feels-like-label {
   font-weight: 600;
-}
-
-.forecast-footer {
-  height: 2rem;
-  border: 1px solid green;
 }
 
 .mid-container {
@@ -416,4 +411,10 @@
 
 .uv-icon {
   width: 5rem;
+}
+
+.forecast-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
